--- a/Greeter/src/main/res/values/ids.xml
+++ b/Greeter/src/main/res/values/ids.xml
@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<item name="greetToWorld" type="id">com.panda.greeter.greetToWorld</item><item name="greetToPerson" type="id">com.panda.greeter.greetToPerson</item><item name="greeting" type="id">com.panda.greeter.greeting</item><item name="personName" type="id">com.panda.greeter.personName</item><item name="serverGreet" type="id">com.panda.greeter.serverGreet</item></resources>
+<item name="greetToWorld" type="id">com.panda.greeter.greetToWorld</item><item name="greetToPerson" type="id">com.panda.greeter.greetToPerson</item><item name="greeting" type="id">com.panda.greeter.greeting</item><item name="personName" type="id">com.panda.greeter.personName</item><item name="serverGreet" type="id">com.panda.greeter.serverGreet</item><item name="buttonImage" type="id"/></resources>
