--- a/Greeter/src/main/res/layout/activity_main.xml
+++ b/Greeter/src/main/res/layout/activity_main.xml
@@ -40,6 +40,14 @@
             android:onClick="serverGreet"
             android:layout_gravity="center"/>
 
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/helloWorldImage"
+            android:id="@id/buttonImage"
+            android:onClick="helloWorldImage"
+            android:layout_gravity="center"/>
+
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,14 +58,6 @@
             android:layout_gravity="center"
             android:hint="@string/greeting"
             android:layout_marginBottom="10dp"/>
-
-    <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/helloWorldImage"
-            android:id="@id/buttonImage"
-            android:onClick="helloWorldImage"
-            android:layout_gravity="left|center_vertical"/>
 
     <ImageView
             android:layout_width="match_parent"
