--- a/Greeter/src/main/res/layout/activity_main.xml
+++ b/Greeter/src/main/res/layout/activity_main.xml
@@ -29,7 +29,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@id/personName"
-                android:hint="@string/personName"/>
+                android:hint="@string/personName"
+                android:text="@string/sumeet"
+                android:gravity="center_vertical|center_horizontal"/>
     </LinearLayout>
 
     <Button
