--- a/Greeter/src/main/res/layout/activity_main.xml
+++ b/Greeter/src/main/res/layout/activity_main.xml
@@ -61,6 +61,14 @@
             android:hint="@string/greeting"
             />
 
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="New Button"
+            android:id="@+id/button"
+            android:layout_gravity="left|center_vertical"
+            android:textSize="26dp"/>
+
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
